--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "css-reset-and-normalize": "^2.3.6",
+    "css-reset-and-normalize": "2.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "1.56.2"
