--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "public", "use": "@vercel/static-build" }
+    { "src": "src/index.js", "use": "@vercel/static-build" }
   ]
 }
