--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "sass": "1.56.2"
   },
   "devDependencies": {
-    "@rollup/plugin-image": "^3.0.1",
+    "@rollup/plugin-image": "3.0.1",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@vitejs/plugin-react": "3.0.0",
